Solution for leetcode 401, Binary watch

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "utility": "cpp",
-        "climits": "cpp"
+        "climits": "cpp",
+        "string": "cpp"
     }
 }
