condition_variable test

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "string": "cpp",
         "vector": "cpp",
         "ostream": "cpp",
-        "shared_mutex": "cpp"
+        "shared_mutex": "cpp",
+        "thread": "cpp"
     }
 }
